--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@babel/runtime": "7.12.5",
     "@popperjs/core": "2.6.0",
-    "bootstrap": "5.0.0-beta1"
+    "bootstrap": "5.0.0-beta1",
+    "core-js": "3.8.1"
   },
   "devDependencies": {
     "@babel/core": "7.12.10",
