--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint": "7.17.0",
     "eslint-config-airbnb-base": "14.2.1",
     "eslint-plugin-import": "2.22.1",
+    "file-loader": "6.2.0",
     "glob": "7.1.6",
     "html-webpack-plugin": "4.5.1",
     "image-minimizer-webpack-plugin": "2.1.0",
